新功能，电影、音乐

--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -1,6 +1,7 @@
 <view class="container">
     <image src="/images/my/my@bg.png" class="bg"></image>
     <!-- <open-data type="userAvatarUrl" class="avatar avatar-position"/> -->
+    <!-- <v-button wx:if="{{!authorized}}" open-type="getUserInfo" class="avatar-position" bindtap="getUserInfo1"> -->
     <v-button wx:if="{{!authorized}}" open-type="getUserInfo" class="avatar-position" bind:getuserinfo="onGetUserInfo">
         <image slot="img" class="avatar" src="/images/my/my.png" />
     </v-button>
