--- a/components/song-item-v2/song-item-v2.wxml
+++ b/components/song-item-v2/song-item-v2.wxml
@@ -4,7 +4,7 @@
   <view class="info">
     <view>{{itemData.name}}</view>
     <view class="source">
-      <image class="icon" src="/assets/images/icons/sq_icon.png"></image>
+      <image class="icon" src="/images/icon/sq_icon.png"></image>
       <text>{{itemData.ar[0].name}}</text>
     </view>
   </view>
