--- a/pages/movie/movie.wxml
+++ b/pages/movie/movie.wxml
@@ -1,24 +1,33 @@
 <!--pages/movie/movie.wxml-->
 <l-segment bind:linchange="changeTabs">
-        <l-segment-item tab="精选" key="hot" />
+        <!-- <l-segment-item tab="精选" key="hot" /> -->
         <l-segment-item tab="剧情" key="drama" />
         <l-segment-item tab="科幻" key="scifi" />
         <l-segment-item tab="喜剧" key="comedy" />
         <l-segment-item tab="动作" key="action" />
 </l-segment> 
 <view wx:if="{{showWhat=='hot'}}">
-<v-movie movie="{{dramaMovie}}"></v-movie>
+
 </view>
-<view wx:if="{{showWhat=='drama'}}">
-剧情
+<view wx:if="{{showWhat=='drama'}}" class="film">
+  <block wx:key="id" wx:for="{{dramaMovie}}">
+    <v-movie movie="{{item}}"></v-movie>
+  </block>
+  
 </view>
-<view wx:if="{{showWhat=='scifi'}}">
-科幻
+<view wx:if="{{showWhat=='scifi'}}"  class="film">
+  <block wx:key="id" wx:for="{{scifiMovie}}">
+    <v-movie movie="{{item}}"></v-movie>
+  </block>
 </view>
-<view wx:if="{{showWhat=='comedy'}}">
-喜剧
+<view wx:if="{{showWhat=='comedy'}}"  class="film">
+  <block wx:key="id" wx:for="{{comedyMovie}}">
+    <v-movie movie="{{item}}"></v-movie>
+  </block>
 </view>
-<view wx:if="{{showWhat=='action'}}">
-动作
+<view wx:if="{{showWhat=='action'}}"  class="film">
+  <block wx:key="id" wx:for="{{actionMovie}}">
+    <v-movie movie="{{item}}"></v-movie>
+  </block>
 </view>
 
