--- a/pages/movie/movie.wxss
+++ b/pages/movie/movie.wxss
@@ -1,1 +1,11 @@
 /* pages/movie/movie.wxss */
+.film {
+  box-sizing: border-box;
+  width: 750rpx;
+  padding: 10rpx 15rpx;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  box-shadow: 0 0 40rpx #f4f4f4 inset;
+}
