--- a/pages/movie-detail/movie-detail.wxss
+++ b/pages/movie-detail/movie-detail.wxss
@@ -196,3 +196,103 @@
 .fd-bd-person-role {
     color: #999
 }
+
+.post-container {
+  height: 100rpx;
+  box-shadow: 1px -1px 1px #e3e3e3;
+  position: fixed;
+  width: 690rpx;
+  background-color: #fff;
+  bottom: 0;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0 30rpx;
+  justify-content: space-between;
+}
+
+.post-fake {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  height: 60rpx;
+  width: 460rpx;
+  border: 1px solid #999;
+  border-radius: 15px;
+  font-size: 22rpx;
+  padding-left: 20rpx;
+}
+
+.like {
+  margin-right: 30rpx;
+  margin-top: 10rpx;
+}
+
+.like-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.posting-container {
+  bottom: 0;
+  position: fixed;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fff;
+  width: 100%;
+  z-index: 999;
+}
+
+.post-header {
+  width: 100%;
+  border-bottom: 1px solid #f5f5f5;
+  border-top: 1px solid #f5f5f5;
+  height: 100rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.cancel {
+  color: #666;
+}
+
+.post-header text {
+  padding: 25rpx;
+}
+
+.post-header>text:first-child {
+  font-size: 28rpx;
+  color: #bbb;
+}
+
+.posting-container .comment-container {
+  width: 690rpx;
+  padding: 40rpx 30rpx 0 30rpx;
+}
+
+.post {
+  width: 690rpx;
+  margin: 30rpx auto;
+  height: 56rpx;
+  background-color: #f5f5f5;
+  border-radius: 15px;
+  padding-left: 25rpx;
+}
+
+.shadow {
+  color: #999;
+}
+.comment-container {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.comment-container v-tag {
+  margin-right: 15rpx;
+  margin-bottom: 10rpx;
+}
