--- a/pages/my/my.wxml
+++ b/pages/my/my.wxml
@@ -15,7 +15,7 @@
             <image src="/images/my/about.png" />
             <text class="description">关于我们</text>
         </view>
-        <view class="about-us">
+        <view class="about-us" bind:tap="ontap">
             <text class="book-num">{{bookCount}}</text>
             <text class="description">喜欢的书</text>
         </view>
