--- a/components/menu-header/menu-header.wxml
+++ b/components/menu-header/menu-header.wxml
@@ -18,7 +18,7 @@
     </view>
   </view>
 
-  <view class="operation">
+  <!-- <view class="operation">
     <view class="favor item">
       <image class="icon" mode="widthFix" src="/images/icon/favor_icon.png"></image>
       <text class="text">{{fmt.formatCount(songInfo.subscribedCount)}}</text>
@@ -27,6 +27,6 @@
       <image class="icon" mode="widthFix" src="/images/icon/share_icon.png"></image>
       <text class="text">分享</text>
     </view>
-  </view>
+  </view> -->
 </view>
 
