--- a/pages/classic/classic.wxml
+++ b/pages/classic/classic.wxml
@@ -1,3 +1,4 @@
+<wxs src="/util/filter.wxs" module="fmt"></wxs>
 <view class="container">
     <view class="header">
         <v-episode class="episode" index="{{classic.index}}" />
@@ -13,3 +14,15 @@
     <v-essay hidden="{{classic.type!=300}}" img="{{classic.image}}" content="{{classic.content}}" />
     <v-navi wx:if="{{needNavi}}" bind:left="onNext" bind:right="onPrevious" title="{{classic.title}}" first="{{first}}" latest="{{latest}}" class="navi" />
 </view>
+<!-- <wxs module="tool">
+    var changeimage = function(i){
+      var reg = getRegExp('5000/', 'g');
+      return i.replace(reg, '8000/');
+      // var ii ='http://localhost:5'+ i.substring(15)
+        
+    }
+
+    module.exports = {
+        changeimage:changeimage
+    }
+</wxs> -->
