--- a/util/filter.wxs
+++ b/util/filter.wxs
@@ -2,9 +2,12 @@ var format = function(text){
     if(!text){
         return
     }
+    // var reg = getRegExp('3000/','g')
+    // return text.replace(reg, '5000/')
     var reg = getRegExp('\\\\n','g')
     return text.replace(reg, '\n&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;')
 }
+
 
 var limit = function(array, length){
     return array.slice(0, length)
